--- a/.github/workflows/build-push-multi.yml
+++ b/.github/workflows/build-push-multi.yml
@@ -1,4 +1,4 @@
-name: Build and Push to GHCR
+name: Build and Push to GHCR (Multi-platform)
 
 on:
   push:
@@ -20,8 +20,16 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+        with:
+          platforms: linux/amd64,linux/arm64
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+        with:
+          driver-opts: |
+            image=moby/buildkit:buildx-stable-1
 
       - name: Log in to Container Registry
         uses: docker/login-action@v3
@@ -48,3 +56,6 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+          platforms: linux/amd64,linux/arm64
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
