refactor: rebrand project from TorBoxUpdater to SchröDrive

--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,7 @@ TORBOX_API_KEY=tb_your_torbox_api_key_here
 TORBOX_BASE_URL=https://api.torbox.app
 
 # Overseerr Webhook (optional)
-OVERSEERR_AUTH=your_secret_auth_header_value
+# OVERSEERR_AUTH=your_secret_auth_header_value
 
 # Service Port (optional)
-PORT=8080
+PORT=8978
