--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "torbox-updater",
+  "name": "schrodrive",
   "version": "0.1.5",
   "private": true,
   "description": "CLI/Webhook service to listen for Overseerr requests, search Prowlarr, and add torrents to TorBox",
   "main": "dist/index.js",
   "bin": {
-    "torbox-updater": "dist/index.js"
+    "schrodrive": "dist/index.js"
   },
   "type": "commonjs",
   "scripts": {
