--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,11 @@
 services:
   torbox-updater:
-    image: ghcr.io/moderniselife/torboxupdater:latest
-    container_name: torbox-updater
+    build: .
+    image: ghcr.io/moderniselife/schrodrive:latest
+    container_name: schrodrive
     restart: unless-stopped
     ports:
-      - "8080:8080"
+      - "8978:8978"
     environment:
       - PROWLARR_URL=${PROWLARR_URL:-http://127.0.0.1:9696}
       - PROWLARR_API_KEY=${PROWLARR_API_KEY}
@@ -12,30 +13,30 @@ services:
       - TORBOX_API_KEY=${TORBOX_API_KEY}
       - TORBOX_BASE_URL=${TORBOX_BASE_URL:-https://api.torbox.app}
       - OVERSEERR_AUTH=${OVERSEERR_AUTH:-}
-      - PORT=8080
-    networks:
-      - media
-    depends_on:
-      - prowlarr
+      - PORT=${PORT:-8978}
     healthcheck:
-      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:8080/health"]
+      test: ["CMD", "curl", "-f", "http://localhost:8978/health"]
       interval: 30s
       timeout: 10s
       retries: 3
       start_period: 40s
+    networks:
+      - media
+    depends_on:
+      - prowlarr
 
   prowlarr:
     image: lscr.io/linuxserver/prowlarr:latest
     container_name: prowlarr
     restart: unless-stopped
-    ports:
-      - "9696:9696"
     environment:
       - PUID=1000
       - PGID=1000
       - TZ=Etc/UTC
     volumes:
       - prowlarr_config:/config
+    ports:
+      - "9696:9696"
     networks:
       - media
 
