feat: enhance Docker configuration and rclone mount reliability
- Added FUSE device access and required capabilities (SYS_ADMIN, apparmor:unconfined) for proper mounting
- Implemented test mount with debug logging before daemon mount to catch connection issues early
- Updated default environment variables for local network setup and added feature toggles (RUN_MOUNT, RUN_POLLER, etc.)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,29 +4,34 @@ services:
     image: ghcr.io/moderniselife/schrodrive:latest
     container_name: schrodrive
     restart: unless-stopped
+    network_mode: host
+    dns: 1.1.1.1
     ports:
       - "8978:8978"
+    devices:
+      - /dev/fuse:/dev/fuse
+    cap_add:
+      - SYS_ADMIN
+    security_opt:
+      - apparmor:unconfined
     environment:
-      - PROWLARR_URL=${PROWLARR_URL:-http://127.0.0.1:9696}
+      - PROWLARR_URL=${PROWLARR_URL:-http://192.168.1.124:9696}
       - PROWLARR_API_KEY=${PROWLARR_API_KEY}
-      - PROWLARR_CATEGORIES=${PROWLARR_CATEGORIES:-}
+      - PROWLARR_TIMEOUT_MS=120000
+      - PROWLARR_SEARCH_LIMIT=100
       - TORBOX_API_KEY=${TORBOX_API_KEY}
       - TORBOX_BASE_URL=${TORBOX_BASE_URL:-https://api.torbox.app}
-      # Providers and Virtual Drive (optional)
       - PROVIDERS=${PROVIDERS:-torbox,realdebrid}
-      # Real‑Debrid API + WebDAV (optional)
       - RD_API_BASE=${RD_API_BASE:-https://api.real-debrid.com/rest/1.0}
-      - RD_ACCESS_TOKEN=${RD_ACCESS_TOKEN:-}
-      - RD_WEBDAV_URL=${RD_WEBDAV_URL:-https://dav.real-debrid.com}
-      - RD_WEBDAV_USERNAME=${RD_WEBDAV_USERNAME:-}
-      - RD_WEBDAV_PASSWORD=${RD_WEBDAV_PASSWORD:-}
-      # TorBox WebDAV (optional)
+      - RD_ACCESS_TOKEN=${RD_ACCESS_TOKEN}
+      - RD_WEBDAV_URL=${RD_WEBDAV_URL:-https://webdav.real-debrid.com}
+      - RD_WEBDAV_USERNAME=${RD_WEBDAV_USERNAME}
+      - RD_WEBDAV_PASSWORD=${RD_WEBDAV_PASSWORD}
       - TORBOX_WEBDAV_URL=${TORBOX_WEBDAV_URL:-https://webdav.torbox.app}
-      - TORBOX_WEBDAV_USERNAME=${TORBOX_WEBDAV_USERNAME:-}
-      - TORBOX_WEBDAV_PASSWORD=${TORBOX_WEBDAV_PASSWORD:-}
-      # Mount settings (rclone must be available in container/host)
-      - MOUNT_BASE=${MOUNT_BASE:-/mnt/schrodrive}
-      - RCLONE_PATH=${RCLONE_PATH:-rclone}
+      - TORBOX_WEBDAV_USERNAME=${TORBOX_WEBDAV_USERNAME}
+      - TORBOX_WEBDAV_PASSWORD=${TORBOX_WEBDAV_PASSWORD}
+      - MOUNT_BASE=${MOUNT_BASE:-/mnt/virtual-drive}
+      - RCLONE_PATH=${RCLONE_PATH:-/usr/local/bin/rclone}
       - MOUNT_VFS_CACHE_MODE=${MOUNT_VFS_CACHE_MODE:-full}
       - MOUNT_DIR_CACHE_TIME=${MOUNT_DIR_CACHE_TIME:-12h}
       - MOUNT_POLL_INTERVAL=${MOUNT_POLL_INTERVAL:-0}
@@ -35,22 +40,21 @@ services:
       - MOUNT_VFS_READ_CHUNK_SIZE_LIMIT=${MOUNT_VFS_READ_CHUNK_SIZE_LIMIT:-}
       - MOUNT_VFS_CACHE_MAX_AGE=${MOUNT_VFS_CACHE_MAX_AGE:-}
       - MOUNT_VFS_CACHE_MAX_SIZE=${MOUNT_VFS_CACHE_MAX_SIZE:-}
-      - MOUNT_OPTIONS=${MOUNT_OPTIONS:-}
-      # Dead scanner
-      - DEAD_SCAN_INTERVAL_S=${DEAD_SCAN_INTERVAL_S:-600}
-      - DEAD_IDLE_MIN=${DEAD_IDLE_MIN:-120}
+      - DEAD_SCAN_INTERVAL_S=${DEAD_SCAN_INTERVAL_S:-1800}
+      - DEAD_IDLE_MIN=${DEAD_IDLE_MIN:-30}
+      - RUN_MOUNT=${RUN_MOUNT:-false}
+      - RUN_DEAD_SCANNER=${RUN_DEAD_SCANNER:-false}
+      - RUN_DEAD_SCANNER_WATCH=${RUN_DEAD_SCANNER_WATCH:-false}
       - OVERSEERR_AUTH=${OVERSEERR_AUTH:-}
-      # Overseerr API poller configuration and toggles
-      - OVERSEERR_URL=${OVERSEERR_URL:-}
       - OVERSEERR_API_KEY=${OVERSEERR_API_KEY:-}
+      - OVERSEERR_URL=${OVERSEERR_URL:-http://192.168.1.124:5055/api/v1}
       - POLL_INTERVAL_S=${POLL_INTERVAL_S:-30}
-      - RUN_WEBHOOK=${RUN_WEBHOOK:-true}
-      - RUN_POLLER=${RUN_POLLER:-false}
-      - PORT=${PORT:-8978}
-      # Auto-update configuration
-      - AUTO_UPDATE_ENABLED=${AUTO_UPDATE_ENABLED:-false}
+      - RUN_WEBHOOK=${RUN_WEBHOOK:-false}
+      - RUN_POLLER=${RUN_POLLER:-true}
+      - PORT=8978
+      - AUTO_UPDATE_ENABLED=${AUTO_UPDATE_ENABLED:-true}
       - AUTO_UPDATE_INTERVAL_S=${AUTO_UPDATE_INTERVAL_S:-3600}
-      - AUTO_UPDATE_STRATEGY=${AUTO_UPDATE_STRATEGY:-exit}
+      - AUTO_UPDATE_STRATEGY=${AUTO_UPDATE_STRATEGY:-exit} # exit | git
       - REPO_OWNER=${REPO_OWNER:-moderniselife}
       - REPO_NAME=${REPO_NAME:-SchroDrive}
     healthcheck:
