feat: improve media file detection and organization
- Added fallback movie detection by checking parent directory names for title/year patterns
- Implemented fuzzy title guessing for unknown files by stripping quality tags and metadata
- Updated organizer to check for provider-specific 'links' subdirectories before scanning

--- a/.env.example
+++ b/.env.example
@@ -54,6 +54,14 @@ PORT=8978
 # Mount settings (rclone must be available in container/host)
 # MOUNT_BASE=/mnt/schrodrive
 # RCLONE_PATH=rclone
+# Map mount ownership/perms to host user
+# PUID=1000
+# PGID=1000
+# MOUNT_UID=1000
+# MOUNT_GID=1000
+# MOUNT_DIR_PERMS=0755
+# MOUNT_FILE_PERMS=0644
+# MOUNT_ALLOW_OTHER=true
 # MOUNT_VFS_CACHE_MODE=full
 # MOUNT_DIR_CACHE_TIME=12h
 # MOUNT_POLL_INTERVAL=0
